# documind

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/documind/: __init__.py  cli.py  client.py  config.py  pipeline.py  token_tracker.py
src/documind/agents/: __init__.py  answerer.py  base.py  citation.py  cli.py  export.py  fact_checker.py  indexer.py  ingester.py  pipeline.py  retriever.py  summarizer.py
tests/: conftest.py  test_answerer.py  test_citation.py  test_cli.py  test_client.py  test_config.py  test_export.py  test_extra.py  test_fact_checker.py  test_indexer.py  test_ingester.py  test_multi_backend.py  test_pipeline.py  test_retriever.py  test_summarizer.py  test_token_tracker.py
